--- a/less/variables.less
+++ b/less/variables.less
@@ -58,3 +58,7 @@
         flex: 4;
     }
 }
+
+.debug {
+    border: 1px solid red;
+}
